#69 refactored hotels errors